--- a/src/components/AboutSection/AboutSection.css
+++ b/src/components/AboutSection/AboutSection.css
@@ -1,53 +1,107 @@
 .about-section {
-    position: relative;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-    height: 80vh;
-    background: #f5f5f5;
-    z-index: 3;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1.1fr 1fr;
+  width: 100%;
+  height: 90vh;
+  background: #f5f5f5;
+  z-index: 3;
+  font-family: "Outfit",sans-serif;
+
+}
+.about-section::after {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  content: " ";
+  top: 0;
+  left: 0;
+  opacity: 0.06;
+  background: url("../../../public/assets/images/backround.png");
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  z-index: 3;
+}
+
+.left-section__about_us {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left-section_about_us_padding {
+  position: relative;
+  width: 100%;
+  height: 90%;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  padding: 60px 40px;
+  align-items: center;
+}
+.founded-title {
+  font-size: 15px;
+  color: #31572c;
+  letter-spacing: 2px;
+}
+.about-us__title {
+  font-size: 47px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.about-us__text {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.75em;
+  color: #171717;
+}
+
+.about-list li {
+  list-style: none;
+  line-height: 50px;
+  font-size: 16px;
+  font-weight: 400;
+}
+
+@media screen and (max-width: 768px) {
+  .about-section {
+    grid-template-columns: 1fr; /* Single column layout for smaller screens */
   }
-.left-section__about_us{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    display: flex;
-   justify-content: center;
-   align-items: center;
-   padding: 30px 0;
-}
-.left-section_about_us_padding{
-    position: relative;
-    width: 70%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
 
+  /* Adjust other styles as needed for smaller screens */
 }
-.founded-title{
-    font-size: 15px;
-    font-family: "Founders Grotesk Bold",sans-serif;
-    color: #31572c;
-
+.img-one{
+  background: url('../../../public/assets/images/garkalni-13-scaled.jpg');
+  position: relative;
+  z-index: 999;
+  width: 250px;
+  height: 350px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  top: 140px;
 }
-.about-us__title{
-    font-family: "Founders Grotesk Bold",sans-serif;
-    font-size: 37px;
+.img-two{
+  background: url('../../../public/assets/images/Kubuls1.png');
+  position: relative;
+  z-index: 999;
+  width: 250px;
+  height: 320px;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  top: 40px;
+  right: 20px;
 }
-.about-us__text{
-    font-size: 14px;
-    font-weight: 300;
-line-height: 1.75em;
-
+.right-section__about_us{
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
-
-
-  @media screen and (max-width: 768px) {
-    .about-section {
-      grid-template-columns: 1fr; /* Single column layout for smaller screens */
-    }
-    
-    /* Adjust other styles as needed for smaller screens */
-  }
