--- a/src/components/HomePage/ServiceItem.css
+++ b/src/components/HomePage/ServiceItem.css
@@ -1,41 +1,39 @@
-
 .inner-carousel .item {
   min-width: 190px;
 
   border-radius: 10px;
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: flex-start;
   overflow: hidden;
-
 }
 
-.item-inner:hover{
+.item-inner:hover {
   transform: scale(1.2);
-  transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
-.item-inner{
-  transition: all .3s ease-in-out;
+.item-inner {
+  transition: all 0.3s ease-in-out;
   width: 100%;
   height: 100%;
   border-radius: 10px;
   cursor: pointer;
   position: relative;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
-.item-inner img{
+.item-inner img {
   position: relative;
   width: 100%;
   height: 100%;
   border-radius: 10px;
   object-fit: cover;
-  
 }
-.service-title{
+.service-title {
   position: absolute;
   /* top: 200px; */
   font-size: 15px;
@@ -45,9 +43,28 @@
   max-width: 100px;
   line-height: 20px;
   margin-bottom: 20px;
-
 }
-.title-line{
+.inner-carousel {
+  position: relative;
+
+  display: flex;
+  gap: 3rem;
+}
+
+.carousel {
+  position: absolute;
+  bottom: 9rem;
+  /* right: 250px; */
+  max-width: 75%;
+  max-height: 50vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.title-line {
   position: absolute;
   top: -10px;
   width: 20px;
@@ -100,34 +117,37 @@
   z-index: 2;
 }
 
+.active-slide {
+  transform: translateY(-10px);
+  transition: all 0.3s ease-in-out;
+}
+
 /* BELLOW 1078px / 67.375em (smaller desktop screen)*/
 
-@media (max-width: 67.375em){
-  .item-inner{
-    transition: all .3s ease-in-out;
+@media (max-width: 67.375em) {
+  .item-inner {
+    transition: all 0.3s ease-in-out;
     width: 95%;
     height: 100%;
     border-radius: 10px;
     cursor: pointer;
     position: relative;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   }
-  
-  
 }
-
 
 /* BELLOW 979px / 66.1875em) (Tablet)*/
 
-@media (max-width: 66.1875em){
-   
-  .item-inner{
-    transition: all .3s ease-in-out;
+@media (max-width: 66.1875em) {
+  .item-inner {
+    transition: all 0.3s ease-in-out;
     width: 85%;
     height: 100%;
     border-radius: 10px;
     cursor: pointer;
     position: relative;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
+      rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   }
 }
